--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~16.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "chart.js": "^4.4.0",
     "primeng": "^16.4.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
